<resources>
    <string name="app_name">Videolang</string>
    <string name="wilkomen">Wilkomen</string>
    <string name="todo">TODO</string>
    <string name="bienvenu">Bienvenu</string>
    <string name="get_started">Get Started</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="hallo">Hallo!</string>
    <string name="Videolang">TODO</string>
    <string name="hello1">Hello</string>
    <string name="beinvenido">Beinvenido</string>
    <string name="caio">Caio</string>
    <string name="enter_name_text">Enter your Name</string>
    <string name="register_here_text">Register here!</string>
    <string name="emailTextView">Email</string>
    <string name="passwordTextView">Password</string>
    <string name="Last_Name_text">Name</string>
    <string name="register_button">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="email">email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="login">Login</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="textview">TextView</string>
    <string name="email_new">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_homepage_app">HomepageApp</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="profile">Profile</string>
    <string name="calls">Calls</string>
    <string name="calender">Calender</string>
    <string name="notification">Notification</string>
    <string name="calendar">Calendar</string>
    <string name="notifications">Notifications</string>
    <string name="new_message">new_message</string>
    <string name="group">Group</string>
    <string name="user_sign_out">Sign Out</string>
    <string name="login_here">Login Here!</string>
    <string name="already_registered">Already Registered ?</string>
    <string name="register_here_txt">Register Here!</string>
    <string name="not_registered_txt">Not Registered?</string>
    <string name="select_photo_text">Select Photo</string>
    <string name="create_message">New Message</string>
    <string name="enter_message">Enter Message</string>
    <string name="send">Send</string>
    <string name="groups">Groups</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_nav">Home</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
</resources>