<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <item
            android:id="@+id/page_1"
            android:enabled="true"
            android:icon="@drawable/ic_notifications_active"
            android:title="@string/notifications"/>
        <item
            android:id="@+id/page_2"
            android:enabled="true"
            android:icon="@drawable/ic_calendar_today"
            android:title="@string/calendar"/>
        <item
            android:id="@+id/page_3"
            android:enabled="true"
            android:icon="@drawable/ic_call"
            android:title="@string/calls"/>
        <item
            android:id="@+id/page_4"
            android:enabled="true"
            android:icon="@drawable/ic_face"
            android:title="@string/profile"/>
</menu>