<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#62C8D8"
    android:visibility="visible"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/select_profile_picture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/select_photo_button"
        android:text="@string/select_photo_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldFirstName"
        android:layout_width="369dp"
        android:layout_height="61dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:hint="@string/firstName"
        android:textColorHint="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstname_edittext_register"
            android:layout_width="354dp"
            android:layout_height="50dp"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldLastName"
        android:layout_width="368dp"
        android:layout_height="65dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:hint="@string/lastName"
        android:textColorHint="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldFirstName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastname_edittext_register"
            android:layout_width="359dp"
            android:layout_height="52dp"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldPassword"
        android:layout_width="369dp"
        android:layout_height="63dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:hint="@string/password"
        android:textColorHint="@android:color/black"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.357"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldLastName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edittext_register"
            android:layout_width="363dp"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldConfirmPassword"
        android:layout_width="366dp"
        android:layout_height="58dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:hint="@string/confirm_password"
        android:textColorHint="@android:color/black"
        app:endIconMode="password_toggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmpass_edittext_register"
            android:layout_width="358dp"
            android:layout_height="51dp"
            android:inputType="textPassword"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners"
        android:text="@string/register_button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldConfirmPassword"
        app:layout_constraintVertical_bias="0.318" />

    <TextView
        android:id="@+id/login_button_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="164dp"
        android:text="@string/login_here"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_profile_picture" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldEmail"
        android:layout_width="370dp"
        android:layout_height="68dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="400dp"
        android:background="@android:color/transparent"
        android:hint="@string/email_new"
        android:textColorHint="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edittext_register"
            android:layout_width="359dp"
            android:layout_height="52dp"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circle_imageview_register"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:civ_border_width="4dp"
        app:layout_constraintEnd_toEndOf="@+id/select_profile_picture"
        app:layout_constraintStart_toStartOf="@+id/select_profile_picture"
        app:layout_constraintTop_toTopOf="@+id/select_profile_picture" />
</androidx.constraintlayout.widget.ConstraintLayout>